k8s/05-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noticeflow-api
  namespace: noticeflow
  labels:
    app: noticeflow-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: noticeflow-api
  template:
    metadata:
      labels:
        app: noticeflow-api
    spec:
      containers:
        - name: api
          image: prad2003/notice-flow-api:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: noticeflow-api-service
  namespace: noticeflow
spec:
  type: NodePort
  selector:
    app: noticeflow-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
